--- a/css/styles.css
+++ b/css/styles.css
@@ -41,3 +41,10 @@
     width:250px;
     padding:8px;
 }
+
+.tab-content {
+    border-left: 1px solid #ddd;
+    border-right: 1px solid #ddd;
+    border-bottom: 1px solid #ddd;
+    padding: 10px;
+}
