--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,18 @@
   margin: 0px auto;
   padding: 0px 0px; }
 
+.modal-header {
+  background-color: #512DA8; }
+
+.modal-body {
+  background-color: #D1C4E9; }
+
+.modal-title {
+  color: white; }
+
+.close {
+  color: white; }
+
 .row-content {
   margin: 0px auto;
   padding: 50px 0px;
